# conn_reg_api

./: main.py  openapi.yaml  pyproject.toml  requirements.txt
app/: main.py
app/fake_data/: connector_sources.json  connectors.json  connectors_and_sources.json  db.py  sources.json
app/models/: connector_sources.py  connectors.py  connectors_and_sources.py
app/routers/: connector_sources.py  connectors.py  connectors_and_sources.py
